# phil

./: .gitattributes  .gitignore  ARCHITECTURE.md  Makefile  README.md  VALIDATION_PLAN.md
data/: DATA_DOCUMENTATION.md  README.md  phil.duckdb  philosophy_journals.json
data/enriched/: theme_index.json  tradition_index.json
data/journal_abstracts/: journal_stats.json  top_journals_abstracts.json
data/journal_fulltext/: download_log.json
data/knowledge_graph/: full_graph.graphml  full_graph.jsonld  influences.json  movements.json  philosophers.json
data/oa_amharic/: openalex_am_philosophy.json
data/oa_arabic/: openalex_ar_philosophy.json
data/oa_bengali/: openalex_bn_philosophy.json
data/oa_chinese/: openalex_zh_philosophy.json
data/oa_danish/: openalex_da_philosophy.json
data/oa_dutch/: openalex_nl_philosophy.json
data/oa_french/: openalex_fr_philosophy.json
data/oa_german/: openalex_de_philosophy.json
data/oa_greek_modern/: openalex_el_philosophy.json
data/oa_targeted/: kyoto_school.json  (+8 more)
docker/: Dockerfile.api  docker-compose.yml
paper/: main.aux  main.out  main.tex  main.toc
python/philapi/: pyproject.toml
python/philapi/src/philapi/: __init__.py  app.py  dependencies.py  schemas.py
python/philapi/src/philapi/routes/: compare.py  embed.py  health.py  models.py  search.py
python/philapi/tests/: conftest.py  test_api.py
python/philbench/: pyproject.toml
python/philbench/src/philbench/: __init__.py  pipeline.py  results.py  verbs.py
python/philbench/src/philbench/dashboard/: __init__.py
python/philbench/tests/: conftest.py  test_bench.py
python/philcore/: pyproject.toml
python/philcore/src/philcore/: __init__.py  collection.py  corpus.py  namespaces.py  registry.py  spans.py  types.py
python/philcore/src/philcore/models/: __init__.py  argument.py  concept.py  relation.py  text.py  thinker.py  tradition.py
python/philcore/src/philcore/ontology/: __init__.py  hierarchy.py  logic.py  mapping.py
python/philcore/src/philcore/serialization/: __init__.py  jsonld.py  rdf.py
python/philcore/tests/: conftest.py  test_models.py
python/philcorpus/: pyproject.toml
python/philcorpus/src/philcorpus/: __init__.py  pipeline.py  registry.py
python/philcorpus/src/philcorpus/extract/: __init__.py  html.py  pdf.py  tei.py
python/philcorpus/src/philcorpus/sources/: __init__.py  aozora.py  base.py  cinii.py  ctp.py  gutenberg.py  jstage.py  openalex.py  philarchive.py
python/philcorpus/tests/: test_sources.py
python/philengine/: pyproject.toml
python/philengine/src/philengine/: __init__.py  cache.py  engine.py  facet.py  preprocessor.py  registry.py
python/philengine/src/philengine/backend/: __init__.py  base.py  cached.py  cohere.py  openai.py  sentence_transformers.py
python/philengine/src/philengine/quantifier/: __init__.py  base.py  lexical.py
python/philengine/tests/: conftest.py  test_engine.py
python/philgraph/: pyproject.toml
python/philgraph/src/philgraph/: __init__.py  graph.py  schema.py
python/philgraph/src/philgraph/backend/: __init__.py  base.py  neo4j_backend.py  networkx_backend.py  rdflib_backend.py
python/philgraph/src/philgraph/backends/: __init__.py  neo4j_backend.py  networkx_backend.py  rdflib_backend.py
python/philgraph/src/philgraph/ingest/: __init__.py  base.py  manual.py  resolver.py  wikidata.py
python/philgraph/src/philgraph/io/: __init__.py  graph_io.py
python/philgraph/src/philgraph/query/: __init__.py  api.py
python/philgraph/src/philgraph/viz/: __init__.py  visualize.py
python/philgraph/tests/: conftest.py  test_graph.py
python/philmap/: pyproject.toml
python/philmap/src/philmap/: __init__.py  concept.py
python/philmap/src/philmap/alignment/: __init__.py  argumentative.py  base.py  hybrid.py  semantic.py  structural.py
python/philmap/src/philmap/analysis/: __init__.py  analogues.py  bridge.py  diff.py  genealogy.py
python/philmap/src/philmap/embedding/: __init__.py  embedder.py
python/philmap/tests/: conftest.py  test_alignment.py
python/philtext/: pyproject.toml
python/philtext/src/philtext/: __init__.py
python/philtext/src/philtext/argument/: __init__.py  extractor.py  rules.py  schemas.py  thesis.py
python/philtext/src/philtext/bridge/: __init__.py  mapper.py  translator.py
python/philtext/src/philtext/classify/: __init__.py  school.py
python/philtext/src/philtext/concept/: __init__.py  extractor.py  ontology.py
python/philtext/src/philtext/corpus/: __init__.py  aligner.py  builder.py  tokenizers.py
python/philtext/src/philtext/hermeneutic/: __init__.py  commentary.py  evolution.py  interpretation.py  tracker.py
python/philtext/src/philtext/influence/: __init__.py  detector.py
python/philtext/tests/: conftest.py  test_text.py
scripts/: build_concept_db.R  build_dbs.py  build_tradition_db.R  collect_corpus.py  download_nonccby_fulltext.py  fetch_missing_abstracts.py  fetch_oa_philosophy.py  import_existing_data.py  validate_all.sh
(+158 files in other folders)
