[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philcore"
version = "0.1.0"
description = "Core data models and structures for the Phil philosophy research ecosystem"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yusuke Matsui", email = "mail.to.matsui@gmail.com" },
]
dependencies = [
    "pydantic>=2.6",
    "rdflib>=7.0",
    "networkx>=3.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
jsonld = ["pyld>=2.0"]
all = ["pyld>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/philcore"]
