[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philcorpus"
version = "0.1.0"
description = "Data acquisition pipeline for philosophical text corpora"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yusuke Matsui" },
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "philcore",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
html = ["beautifulsoup4>=4.12"]
xml = ["lxml>=5.0"]
all = ["pymupdf>=1.24", "beautifulsoup4>=4.12", "lxml>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/philcorpus"]
