[project]
name = "philmap"
version = "0.1.0"
description = "Cross-cultural philosophical concept alignment and mapping"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philmap"]
